# tub-lifter

./: .gitignore  README.md  pyproject.toml  setup_can.sh
firmware/: flash_i2c.py  platformio.ini
firmware/src/: main.c
src/tub_lifter/: actuator.py  app.py
src/tub_lifter/templates/: index.html
